--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ drumhat==0.1.0
 enum-compat==0.0.2
 envirophat==1.0.0
 ExplorerHAT==0.4.2
-Flask==0.12.1
+Flask>=0.12.3
 fourletterphat==0.1.0
 gpiozero==1.4.1
 gTTS==2.0.3
@@ -62,11 +62,11 @@ pyinotify==0.9.6
 PyJWT==1.4.2
 pylgbst==0.10
 pylint==1.6.5
-pyOpenSSL==16.2.0
+pyopenssl>=17.5.0
 pyperclip==1.5.27
 pyserial==3.4
 python-apt==1.1.0b5
-pyxdg==0.25
+pyxdg>=0.26
 rainbowhat==0.1.0
 requests==2.21.0
 requests-oauthlib==0.7.0
@@ -93,7 +93,7 @@ touchphat==0.0.1
 twython==3.4.0
 typed-ast==0.6.3
 unicornhathd==0.0.4
-urllib3==1.24.1
+urllib3>=1.24.2
 wcwidth==0.1.7
 Werkzeug==0.11.15
 wit==5.1.0
