--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ idna==2.8
 isort==4.2.5
 itsdangerous==0.24
 jedi==0.10.2
-Jinja2==2.8
+Jinja2>=2.10.1
 keyring==10.1
 keyrings.alt==1.3
 lazy-object-proxy==1.2.2
